Added background image

--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,22 @@ color: black;
     color: #CFB290;
 }
 
-.banner{
+/* This is for Hero section */
+
+.hero-section{
+    background-image: url("../images/sofa.jpg");
+    background-repeat: no-repeat;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
     width: 100%;
-    position: relative;
-    top: -25rem;
-    z-index: -1;
+    height: auto;
 }
 
 .main-heading{
     margin: 80px 80px 0 80px;
     font-family: 'Roboto Serif', sans-serif;
+    position: relative;
     font-size: 4rem;
     width: 45%;
     color: #5e6061;
@@ -61,8 +67,7 @@ color: black;
 }
 
 .cta{
-    margin-left: 80px;
-    margin-top: 30px;
+    margin: 30px 0 30px 80px;
     border: none;
     background-color: #393b3b;
     color: white;
@@ -71,5 +76,6 @@ color: black;
 
 .cta:hover{
     padding: 18px 31px 18px 31px;
+    transform: scale(1);
     transition: ease 200ms;
 }
